# cmdict_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cmdict_bot.code-workspace  main.py  poetry.sh  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: deploy-test.yml  deploy.yml
cmdict_bot/: app.py  bot.py  db.py  log.py  main.py
example/: requirements.txt
src/: Dockerfile  main.py  poetry.sh  pyproject.toml  requirements.txt  set_up_db.py
src/cmdict_bot/: __init__.py  bot.py  db.py
src/tests/: requirements.txt
src/tests/unit/: test_handler.py
tests/: test_app.py  test_bot.py
tests/integration/: test_api_gateway.py
tests/unit/: test_bot.py  test_handler.py
