[tool.poetry]
name = "cmdict_bot"
version = "0.1.0"
description = "cmdict as telegram bot"
authors = ["Edward Xu <edxu96@outlook.com>"]
license = "GNU v3"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"
python-telegram-bot = "^13.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
