[tool.poetry]
name = "cmdict_bot"
version = "0.1.0"
description = "cmdict as telegram bot"
authors = ["Edward Xu <edxu96@outlook.com>"]
license = "GNU v3"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.1"
python-telegram-bot = "^20.0a0"
cmdict = "^0.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
pytest = "^7.1.2"
pip = "^22.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
